fix(Card): image visibility when active or focused image is appearing now even when is active or focused

--- a/packages/styles/scss/components/card/index.scss
+++ b/packages/styles/scss/components/card/index.scss
@@ -77,6 +77,9 @@
 
       &:focus,
       &:active {
+        position: relative;
+        z-index: 2;
+
         .#{$prefix}--image__img {
           position: relative;
           z-index: -1;
